--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>qwerty</title>
+<title>UTC AR Test</title>
+<script scr="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
 </head>
 <body>
-qwerty
+<a-scene>
+<a-gltf-model position="0 0 -4" rotation="0 0 0" scale="0.1 0.1 0.1" scr="Teapot/Teapot.gltf"></a-gltf-model>
+<a-plane position
+</a-scene>
 </body>
 </html>
