--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
 <a-scene>
 <a-gltf-model position="0 0 -4" rotation="0 0 0" scale="0.1 0.1 0.1" scr="Teapot/Teapot.gltf"></a-gltf-model>
+
+<a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" colour="#7BC8A4"></a-plane>
+<a-sky color="'ECECEC"></a-sky>
 <a-plane position
 </a-scene>
 </body>
